--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,6 +38,6 @@
 @import "vendor/font-awesome/solid";
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
-@import "print";
-
+/*custom style*/
 @import "custom";
+@import "print";
